// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214



package dataControllerUtils.protobuf;

message DataId {
extensions 15 to 107;

  optional uint64 queryId = 1;
  optional string parameterName = 2;
  optional string oid = 3;
  optional string catalog = 4;
  optional string comObject = 5;
  optional uint32 sessionId = 6;
  optional uint32 domainId = 7;
  optional string domain = 8;
  optional string url = 9;
  optional string version = 10;
}
